[tool.poetry]
name = "build_corpus_sandbox"
version = "0.1.0"
description = ""
authors = ["Niten Nashiki"]

[tool.poetry.dependencies]
python = "^3.9"
wikiextractor = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
